--- a/_config.yaml
+++ b/_config.yaml
@@ -1,4 +1,4 @@
-title: Daniel Destaw
+title: Daniel Destaw Yimam
 logo: /assets/img/headshot_circle.png
 #description: text below image
 show_downloads: true
