--- a/_config.yaml
+++ b/_config.yaml
@@ -3,3 +3,4 @@ logo: /assets/img/headshot_circle.png
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
+resume_download: "https://github.com/yourusername/yourrepo/raw/main/resume.pdf"
